fixed dark mode

--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -604,6 +604,10 @@
           filter: grayscale(1) brightness(1000%);
         }
 
+        &:hover {
+          background-color: var(--dark);
+        }
+
         .cs-h3 {
           color: var(--bodyTextColorWhite);
         }
